--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dancing+Script&family=Fragment+Mono:ital@1&family=Frank+Ruhl+Libre:wght@300&family=Josefin+Sans:ital,wght@1,600&family=Lato:ital@1&family=Playfair+Display:ital@0;1&family=Poppins:ital,wght@0,200;0,300;1,200&family=Work+Sans:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&family=Rajdhani:wght@600&family=Raleway+Dots&family=Signika+Negative:wght@700&display=swap');
 
 body {
   margin: 0;
   color: white;
   background-color: #040714;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue','Signika Negative','Rajdhani','Raleway Dots'
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
